--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 # Server Configuration
 PORT=5000
-NODE_ENV=development
+NODE_ENV=production
 
 # MongoDB Configuration
 MONGODB_URI=mongodb+srv://rahul:rahul1@cluster0.lforz.mongodb.net/?retryWrites=true&w=majority&appName=note_app
